Event request fix and swagger defination edited
